--- a/views/cuisConteneurs/show_admin.ejs
+++ b/views/cuisConteneurs/show_admin.ejs
@@ -37,7 +37,7 @@
 <body style="background-color: #cbc6ee; padding-bottom : 0px;">
   
     <nav class="navbar navbar-expand-lg navbar-dark  mb-4" style="background-color: #7c6df0;">
-      <a class="navbar-brand" href="#">GestDéchets</a>
+      <a class="navbar-brand" href="/Page0">Aceuil</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,16 +45,12 @@
       <div class="collapse navbar-collapse ml-4" style="float: right" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/Page0">Page d'accueil<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/register">Register</a>
+            <a class="nav-link" href="/listeCt/tout">Gestion des conteneurs<span class="sr-only">(current)</span></a>
           </li>
           
           
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">A propos de l'application Web</a>
-          </li>
+          
+          
         </ul>
         <span class="nav-item">
           <form action="/logout?_method=DELETE" method="POST">
@@ -158,8 +154,8 @@
       </div>
       
     </div>
-    <div class="mt-2">
-      <a href="/listeCt/tout" class="btn btn-secondary">
+    <div class="mt-4 text-center" >
+      <a href="/listeCt/tout" class="btn btn-secondary" >
         Tous les conteneurs
       </a>
     </div>
