--- a/views/Page2.ejs
+++ b/views/Page2.ejs
@@ -2216,13 +2216,13 @@ a:hover.back-to-top {
                         <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#features">Ajouter un conteneur</a>
+                        <a class="nav-link page-scroll" href="cuisConteneurs/new">Ajouter un conteneur</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">Gestion des conteneurs</a>
+                        <a class="nav-link page-scroll" href="/listeCt/tout">Gestion des conteneurs</a>
                     </li>
 					<li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">Gestion des comptes</a>
+                        <a class="nav-link page-scroll" href="/listeusers">Gestion des comptes</a>
                     </li>
 
                    
